[package]
name = "yass"
version = "1.0.0"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/binh-vu/strsim"
repository = "https://github.com/binh-vu/strsim"
license-file = "LICENSE"
description = "Yet another string similarity library"
keywords = ["string similarity", "strsim", "levenshtein", "jaro winkler", "jaro", "monge elkan"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
derive_more = "0.99.17"
hashbrown = "0.13.2"
itertools = "0.10.5"
lsap = "1.0.2"
pyo3 = { version = "0.18.3", features = ["anyhow", "multiple-pymethods"] }
thiserror = "1.0.40"


[dev-dependencies]
approx = "0.5.1"
maplit = "1.0.2"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]